Fixed a few things Such as reneaming Wind Variant to ALL instead, modifying the power multiplier requirements etc. Also changed to version 1.0.0-ReleaseCandidate